--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="quiz-container">
-        <h1>Texas Government Quiz</h1>
-        <div id="quiz"></div>
-        <button id="submit">Submit Quiz</button>
-        <div id="results"></div>
+    <div class="quiz-container" id="quiz">
+        <!-- Quiz questions will load here dynamically -->
     </div>
+    <button id="submit">Submit Quiz</button>
+    <div id="results"></div>
     <script src="script.js"></script>
 </body>
 </html>
